made the first graph pretty

--- a/esm206_assignment_5.Rmd
+++ b/esm206_assignment_5.Rmd
@@ -45,7 +45,26 @@ pacific_sal_n <- mack_creek %>%
 
 ```{r}
 ggplot(pacific_sal_n, aes(x = year, y = n)) +
-  geom_line(aes(color = section))
+  geom_line(aes(color = section),  show.legend = FALSE) +
+   scale_color_manual(values = c("saddlebrown", "forestgreen")) +
+  annotate(geom = "text", 
+           x = 2000.7, y = 100, size = 3.5, fontface = 2,
+           label = "Clear Cut", color = "saddlebrown") +
+  annotate(geom = "text", 
+           x = 1997.9, y = 190, size = 3.5, fontface = 2,
+           label = "Old Growth", color = "forestgreen") +
+  labs(x = "Year", 
+       y = "Number of Salamanders",
+       title = "Salamander Abundance in Mack Creek, 1993-2017") +
+  theme_bw() +
+  theme(axis.line = element_line(color = "black"), 
+                    panel.border = element_blank(),
+                    panel.grid.major = element_blank(),
+                    panel.grid.minor = element_blank()) +
+  theme(plot.title = element_text(hjust = 0.5)) +
+  scale_x_continuous(expand = c(0,0), limits = c(1993, 2017)) +
+  scale_y_continuous(expand = c(0,0), limits = c(50, 400)) 
+  
 
 ```
 **Figure 1.** ADD CAPTION AND MAKE PRETTY AND ANALYZE (EMMA)
