fixed in line referencing from office hours

--- a/esm206_assignment_5.Rmd
+++ b/esm206_assignment_5.Rmd
@@ -224,6 +224,8 @@ ggplot(sal_weight_class, aes(x = unittype, y = weight)) +
 ```
 **Figure 2.** ADD CAPTION AND MAKE PRETTY AND ANALYZE
 
+(maybe standard error instead of standard deviation) Mention outliers, means, standard deviations. There's a lot more observations in general in channels
+
 ```{r, include = FALSE}
 #visually explore to check for normality:
 ggplot(sal_weight_class, aes(x = weight)) +
@@ -257,7 +259,7 @@ TukeyHSD(sal_class_aov)
 ```
 The only two that have a significant difference in means are Side channels and pools. (p < .05)
 
-Mean weight of Pacific Giant Salamanders (g) did not differ significantly across pools, channels, and side channels (one-way ANOVA, F(r sal_aov_outputs[1], r sal_aov_outputs[2]) = r round(sal_aov_outputs[7],2, *p* = r round(sal_aov_outputs[9], 3)).
+Mean weight of Pacific Giant Salamanders (g) did not differ significantly across pools, channels, and side channels (one-way ANOVA, F(`r sal_aov_outputs[1]`, `r sal_aov_outputs[2]`) = `r round(sal_aov_outputs[7],2)`, *p* = `r round(sal_aov_outputs[9], 3)`).
 ** ANALYZE MEAN DIFFERENCES, PERCENT DIFFERENCES, AND EFFECT SIZES**
 iii) concerns: there are a lot of outliers, so means are skewed, so maybe medians are better 
 
