--- a/esm206_assignment_5.Rmd
+++ b/esm206_assignment_5.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "ESM206 Assignment 5"
-author: "Anna Abelman"
+author: "Emma Friedl & Anna Abelman"
 date: "11/23/2019"
 output: html_document
 ---
@@ -19,15 +19,17 @@ library(here)
 library(effsize)
 library(ggridges)
 library(knitr)
+library(car)
 
 ```
 ![](pacific_giant_salamander_pic.jpg)
+
 Image from:https://blogs.scientificamerican.com/tetrapod-zoology/the-pacific-giant-salamanders/
 
 ### Introduction: (EMMA)
 
 
-### Data Methods: 
+### Data and Methods: 
 The data for the Pacific Giant Salamanders in Mack Creek in Oregon from 1993-2017 were provided by [Aquatic Vertebrate Population Study in Mack Creek, Andrews Experimental Forest](https://doi.org/10.6073/pasta/5de64af9c11579266ef20da2ff32f702). The two location of sampling sections were in the clear cut forest and an old coniferous forest. The unit type was also recorded and classified as cascade, side channel and pool. All samples of Pacific Giant Salamanders were measured and weight (g) at each section throughout the time period. Changes in population size from 1993-2017 were based on the abundance of salamanders found each year. The association between the classification type and section type was determined by a Chi-Squared test. Salamander weight distribution (g) for 2017 was compared at the three specified classification times, including the mean and standard error. The mean salamander size for each were analyzed by a one-way ANOVA test and Tukey's test. The entire analysis was performed using R software 3.6.1. Additional information about data can be found by viewing the [metadata](https://portal.edirepository.org/nis/metadataviewer?packageid=knb-lter-and.4027.12).
 
 ### Results:
@@ -41,7 +43,7 @@ mack_creek <- read_csv(here::here("raw_data", "mack_creek_vertebrates.csv")) %>%
   
 ```
 
-##### A.
+##### A. Salamander Abundance, 1993-2017
 ```{r}
 #group Giant Pac. Sals by year and count vs section
 pacific_sal_n <- mack_creek %>% 
@@ -94,11 +96,14 @@ ggplot(pacific_sal_n, aes(x = year, y = n)) +
   scale_y_continuous(expand = c(0,0), limits = c(50, 400)) 
 
 ```
+
 **Figure 1.** Pacific Giant Salamander counts (individuals) in Mack Creek in old growth areas (green) and clear cut areas (brown) from 1993-2017. Abundance increased in both areas over time, with both following similar variational trends. 
 
 From 1993-2017, Pacific Giant Salamander abundance in Mack Creek follows a similar trend in both old growth forest and clear cut areas. Overall, salamanders in both locations increased greatly in abundance during the time period, in old growth by `r pct_change_og`% and in clear cut by `r pct_change_cc`%. While salamander population increased overall, both locations experienced a sharp decline from 2011 to 2014, most likely due to an environmental stressor outside the scope of this report. After 2014, populations starting rising again. Salamander abundance was slightly higher in old growth forests also until 2014, when the trend switched and clear cur areas had slightly more salamanders.
 
-##### B.
+
+##### B. Salamander Counts by Forest Condition and Channel Classification
+
 **Table 1**: The number of Pacific Giant Salamanders in clear cut and old growth areas found specificially in cascade, pools, and side channels. The proportion of each location is shown as percentages.
 ```{r}
 pacific_sal_class <- mack_creek %>%
@@ -126,7 +131,8 @@ kable(pacific_sal_props, col.names = c("Cascades", "Pools", "Side Channels"))%>%
                 font_size = 13)
 ```
 
-##### C.
+
+##### C. Chi-Square Test for Independence
 
 ```{r}
 #chi-square test for measuring proportions
@@ -139,7 +145,8 @@ chi_sal_test <- chisq.test(chi_sal)
 
 There is no significant effect of forest condition (old growth or clear cut) on where in the channel salamanders are found (channel classification) ($\chi$^2^(`r chi_sal_test$parameter`) = `r round(chi_sal_test$statistic, 2)`, *p* = `r round(chi_sal_test$p.value, 2)`),(*p* > 0.05).**TALK ABOUT ACTUAL PROPORTIONS**
 
-##### D.
+
+##### D. T-test for Mean Weight Differences 
 ```{r, include = FALSE}
 sal_weight_section <- mack_creek %>% 
   select(year, species, section, weight) %>% 
@@ -207,7 +214,8 @@ se_og <- sd_og/sqrt(n_og)
 
 In 2017, the mean weights of the Pacific Giant Salamanders in clear cut forest sections (`r round(mean_cc, 2)` $\pm$ `r round(sd_cc, 2)`, n = `r n_cc`) did not differ significantly from old growth forest sections (`r round(mean_og, 2)` $\pm$ `r round(sd_og, 2)`, n = `r n_og`) by a unpaired two-sample t-test (t(`r round(sal_og_cc_tt$parameter, 2)`) = `r round(sal_og_cc_tt$statistic, 2)`, *p* > 0.005). The Cohen's d calculation (d = `r round(sal_og_cc_d$estimate, 2)`, *d* < 0.2) shows a small effect size, so our p-value is most likely accurate.
 
-##### E. 
+
+##### E. Salamander Weight Distributions by Channel Classification 
 
 ```{r}
 sal_weight_class <- mack_creek %>% 
@@ -255,14 +263,14 @@ ggplot(sal_weight_class, aes(x = unittype, y = weight)) +
                    ymax = mean_weight + se_weight),
                 width = 0.1)+
   scale_x_discrete(labels = c("Cascades", "Pools", "Side Channels"))+
-  labs(x = "Class Classification", y = "Weight (g)", title = "Distribution of Pacific Giant Salamander Weight for Each Classification")+
+  labs(x = "Channel Classification", y = "Weight (g)", title = "Distribution of Pacific Giant Salamander Weight for Each Classification")+
   theme_minimal()+
-  theme(plot.title = element_text(size = 11.5))
+  theme(plot.title = element_text(size = 11.5,  hjust = .5))
 
 ```
+
 **Figure 2.** Pacific Giant Salamander's weight distribution (g) (shown in green) and mean weight (black dot) (g) found at the classifications: cascades(n = `r num_channel`), pools (n = `r num_pools`), and side channels (n = `r num_side_channel`). The black dot indicates the mean weight, while the bars show the standard error at each all three classification.
 
-(maybe standard error instead of standard deviation) Mention outliers, means, standard deviations. There's a lot more observations in general in channels
 
 ```{r, include = FALSE}
 #visually explore to check for normality:
@@ -280,8 +288,12 @@ ggplot(sal_weight_class, aes(sample = weight)) +
 
 
 ```{r, include = FALSE}
-#ANOVA! 
 
+#Levene test for equal variances 
+leveneTest(weight ~ unittype, data = sal_weight_class)
+#no significant difference in variances accross class. ANOVA is appropriate
+
+#ANOVA 
 sal_class_aov <- aov(weight ~ unittype, 
                      data = sal_weight_class)
 summary(sal_class_aov)
@@ -295,17 +307,17 @@ sal_aov_outputs
 TukeyHSD(sal_class_aov)
 
 ```
-The only two that have a significant difference in means are Side channels and pools. (p < .05)
 
-Mean weight of Pacific Giant Salamanders (g) did not differ significantly across pools, cascades, and side channels (one-way ANOVA, F(`r sal_aov_outputs[1]`, `r sal_aov_outputs[2]`) = `r round(sal_aov_outputs[7],2)`, *p* = `r round(sal_aov_outputs[9], 3)`).
-** ANALYZE MEAN DIFFERENCES, PERCENT DIFFERENCES, AND EFFECT SIZES**
-iii) concerns: there are a lot of outliers, so means are skewed, so maybe medians are better 
+Mean weights of Pacific Giant Salamanders (g) did not differ significantly across pools (*$\mu$* = `r round(sal_weight_class$mean_weight[475],2)`g), cascades (*$\mu$* = `r round(sal_weight_class$mean_weight[16],2)`g), and side channels (*$\mu$* = `r round(sal_weight_class$mean_weight[34], 2)`g) (one-way ANOVA, F(`r sal_aov_outputs[1]`, `r sal_aov_outputs[2]`) = `r round(sal_aov_outputs[7],2)`, *p* = `r round(sal_aov_outputs[9], 3)`). Salamanders found in pools had a mean weight of `r round(((sal_weight_class$mean_weight[475] - sal_weight_class$mean_weight[16]) / sal_weight_class$mean_weight[16] * 100), 2)`% greater than those in cascades. Salamanders found in cascades had a mean weight of `r round(((sal_weight_class$mean_weight[16] - sal_weight_class$mean_weight[34]) / sal_weight_class$mean_weight[34] * 100), 2)`% greater than those in side channels. 
 
+The post-hoc Tukey HSD test shows only a significant difference in mean salamander weights between side channels and pools (*p* < .05). Salamanders found in pools had a mean weight of `r round(((sal_weight_class$mean_weight[475] - sal_weight_class$mean_weight[34]) / sal_weight_class$mean_weight[34] * 100), 2)`% greater than those in side channels. All other combinations did not differ significantly in the Tukey HSD test (*p* > .05).
 
-### Summary:
--
--
--
+While t-tests and ANOVAs were determined to be valid tests for this data, a comparison of means may not be the most accurate way to analyze differences. The prevalence of large outliers in the weight observations by classification created positive skews that likely influenced the calculated mean weights. Therefore, a ranked test of medians may be better suited to analyze the data, as medians are not as influenced by outliers.
+
+### Summary
+- Pacific Giant Salamander abundance was comparable in both clear cut and old growth areas and increased from 1993-2017 (Figure 1).
+- While the majority of salamanders were observed in cascades, there is no effect of forest condition on channel classification (Table 1).
+- There is a significant difference in mean weights only between salamanders found in side channels and pools (Figure 2).
 
 
 ### References:
