wrote the intro

--- a/esm206_assignment_5.Rmd
+++ b/esm206_assignment_5.Rmd
@@ -26,8 +26,8 @@ library(car)
 
 Image from:https://blogs.scientificamerican.com/tetrapod-zoology/the-pacific-giant-salamanders/
 
-### Introduction: (EMMA)
-
+### Introduction:
+Pacific giant salamanders (Dicamptodon tenebrosus) typically reside in the Pacific Northwest of the United States, from San Francisco to as north as Canada. The large amphibians are mainly found in thick forests near streams, rivers, or lakes ("Pacific Giant..." 2019). These creatures are important for ecosystem health and biodiversity. With current rates of urbanization and deforestation, wildlife activists are concerned that leveling forests may have an adverse effect on biodiversity and animal health, including for the Pacific giant salamander. To determine if removing trees impacts these salamanders, this report will analyze two variables that indicate species health: abundance and weight of salamanders in Mack Creek, Oregon. By evaluating salamander abundance in both old growth and clear cut areas, as well as comparing salamander weights in cascades, side channels, and pools, this paper will determine if habitat location results in a significant difference in Pacific giant salamander population characteristics. 
 
 ### Data and Methods: 
 The data for the Pacific Giant Salamanders in Mack Creek in Oregon from 1993-2017 were provided by [Aquatic Vertebrate Population Study in Mack Creek, Andrews Experimental Forest](https://doi.org/10.6073/pasta/5de64af9c11579266ef20da2ff32f702). The two location of sampling sections were in the clear cut forest and an old coniferous forest. The unit type was also recorded and classified as cascade, side channel and pool. All samples of Pacific Giant Salamanders were measured and weight (g) at each section throughout the time period. Changes in population size from 1993-2017 were based on the abundance of salamanders found each year. The association between the classification type and section type was determined by a Chi-Squared test. Salamander weight distribution (g) for 2017 was compared at the three specified classification times, including the mean and standard error. The mean salamander size for each were analyzed by a one-way ANOVA test and Tukey's test. The entire analysis was performed using R software 3.6.1. Additional information about data can be found by viewing the [metadata](https://portal.edirepository.org/nis/metadataviewer?packageid=knb-lter-and.4027.12).
